# inkify

./: .bazelrc  BUILD.bazel  INKIFY.md  KMP_INTEGRATION.md  MODULE.bazel  inkify.def
ink/: BUILD.bazel  inkify_c_api.cc  inkify_c_api_test.c
ink/geometry/: quad.h
ink/rendering/: BUILD.bazel  lod_manager.cc  lod_manager.h
ink/storage/: BUILD.bazel  collaboration.cc  collaboration.h  collaboration_test.cc
ink/storage/proto/: BUILD.bazel  collaboration.proto
ink/strokes/: BUILD.bazel  chunk.h  chunk_manager.cc  chunk_manager.h  chunk_manager_test.cc  crdt_stroke.h  stroke_manager.cc  stroke_manager.h  stroke_manager_test.cc
release/kmp/interop/: inkify_c_api.h
scripts/: package_kmp.ps1  package_kmp.sh
