# Copyright 2024-2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_binary.bzl", "cc_binary")

package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "inkify_c_api",
    srcs = ["inkify_c_api.cc"],
    hdrs = ["inkify_c_api.h"],
    deps = [
        "//ink/geometry:rect",
        "//ink/strokes:chunk_manager",
        "//ink/strokes:stroke_manager",
    ],
)

# This target builds the shared library (.so, .dylib, or .dll)
cc_binary(
    name = "libinkify",
    linkshared = True,
    deps = [":inkify_c_api"],
)

cc_test(
    name = "inkify_c_api_test",
    srcs = ["inkify_c_api_test.c"],
    deps = [":inkify_c_api"],
)
